--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "Jan Neuman <neuman.jan@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "express": "^4.17.1"
   }
 }
