--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-register": "^6.26.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "request": "^2.88.0"
   }
 }
