--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   "author": "Jan Neuman <neuman.jan@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "cheerio": "^1.0.0-rc.3",
+    "evergreen-ui": "^4.21.5",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "prettier": "^1.19.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
