--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lunches",
-  "version": "0.1",
+  "version": "0.1.0",
   "description": "Just another lunch scrapper",
   "main": "index.js",
   "repository": "git@github.com:janneuman/lunches.git",
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "11.15.0"
   }
 }
